[fix] added more spacing between left and right arrows

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
 }
 
 #rightArrow {
-  margin: 0px 5px 0px 5px;
+  margin: 0px 10px 0px 10px;
   width: 0; 
   height: 0; 
   border-top: 10px solid transparent;
@@ -78,7 +78,7 @@ body {
 }
 
 #leftArrow {
-  margin: 0px 5px 0px 5px;
+  margin: 0px 10px 0px 10px;
   width: 0; 
   height: 0; 
   border-top: 10px solid transparent;
